# cmd/complain/doc/swagger.yaml
@@ -17,14 +17,14 @@ definitions:
     type: object
   model.StatusEnum:
     enum:
+    - pending
     - approved
     - rejected
-    - pending
     type: string
     x-enum-varnames:
+    - Pending
     - Approved
     - Rejected
-    - Pending
   model.User:
     properties:
       firstname:
@@ -43,30 +43,7 @@ info:
   title: Complain Service API
   version: v0
 paths:
-  /api/complains:
-    get:
-      consumes:
-      - application/json
-      description: GetAllComplains
-      operationId: GetAllComplains
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      security:
-      - BearerAuth: []
-      summary: GetAllComplains
-      tags:
-      - Complains
+  /api-complains/complains:
     post:
       consumes:
       - application/json
@@ -96,7 +73,115 @@ paths:
       - BearerAuth: []
       summary: Create a new complain
       tags:
-      - complain
+      - CreateComplains
+  /api-complains/complains/all:
+    get:
+      consumes:
+      - application/json
+      description: GetAllComplains
+      operationId: GetAllComplains
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: GetAllComplains
+      tags:
+      - GetComplains
+  /api-complains/complains/exhibitions:
+    get:
+      consumes:
+      - application/json
+      description: GetComplainsGroupByExhibitionName
+      operationId: GetComplainsGroupByExhibitionName
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: GetComplainsGroupByExhibitionName
+      tags:
+      - GetComplains
+  /api-complains/complains/exhibitions/{id}:
+    get:
+      consumes:
+      - application/json
+      description: GetComplainByExhibitionID
+      operationId: GetComplainByExhibitionID
+      parameters:
+      - description: Exhibition ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: GetComplainByExhibitionID
+      tags:
+      - GetComplains
+  /api-complains/complains/exhibitions/{id}/reject:
+    delete:
+      consumes:
+      - application/json
+      description: DeleteComplainByExhibitionID
+      operationId: DeleteComplainByExhibitionID
+      parameters:
+      - description: Exhibition ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: DeleteComplainByExhibitionID
+      tags:
+      - Rejects
 schemes:
 - http
 securityDefinitions:
